# polocloud-sdk-rust

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: init.rs  lib.rs
src/event/: model.rs
src/proto/: group.rs  mod.rs  polo_player.rs  service.rs
src/provider/: event.rs  group.rs  mod.rs  player.rs  service.rs
src/rpc/: rpc_client.rs
