[package]
name = "polocloud-sdk"
version = "3.0.0-pre.6.2-SNAPSHOT"
edition = "2024"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
